testing different theories

--- a/page_2.html
+++ b/page_2.html
@@ -8,6 +8,13 @@
     <link href="styles/p2_style.css" rel="stylesheet">
 </head>
 <body>
+    <div id="header">
+        <a class="navigation" href="index.html">Home</a>
+        <a class="navigation" href="page_1.html">Columns</a>
+        <a class="navigation" href="page_2.html">Rows</a>
+        <a class="navigation" href="page_3.html">Nested</a>
+    </div>
+</div>
     
 </body>
 </html>
