--- a/page_2.html
+++ b/page_2.html
@@ -14,7 +14,23 @@
         <a class="navigation" href="page_2.html">Rows</a>
         <a class="navigation" href="page_3.html">Nested</a>
     </div>
-</div>
+
+    <div id="container">
+            <div class="item">Item 1</div>
+            <div class="item">Item 2</div>
+            <div class="item">Item 3</div>
+
+            <div class="item">Item 4</div>
+            <div class="item">Item 5</div>
+            <div class="item">Item 6</div>
+
+            <div class="item">Item 7</div>
+            <div class="item">Item 8</div>
+            <div class="item">Item 9</div>
+        
+    </div>
     
+
+
 </body>
 </html>
