--- a/page_2.html
+++ b/page_2.html
@@ -15,7 +15,7 @@
         <a class="navigation" href="page_3.html">Nested</a>
     </div>
 
-    <div id="container">
+    <div id="middle-column">
             <div class="item">Item 1</div>
             <div class="item">Item 2</div>
             <div class="item">Item 3</div>
@@ -27,7 +27,6 @@
             <div class="item">Item 7</div>
             <div class="item">Item 8</div>
             <div class="item">Item 9</div>
-        
     </div>
     
 
