--- a/page_3.html
+++ b/page_3.html
@@ -29,7 +29,8 @@
 
             <div class="item">Item 7</div>
             <div class="item">Item 8</div>
-            <div class="item">Item 9</div></div>
+            <div class="item">Item 9</div>
+        </div>
             
     </div>
 
