--- a/page_3.html
+++ b/page_3.html
@@ -19,17 +19,17 @@
 <div id="container">
     <div id="middle-column">
         <div class="item-holder">
-            <div class="item">Item 1</div>
-            <div class="item">Item 2</div>
-            <div class="item">Item 3</div>
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
 
-            <div class="item">Item 4</div>
-            <div class="item">Item 5</div>
-            <div class="item">Item 6</div>
+            <div class="item">4</div>
+            <div class="item">5</div>
+            <div class="item">6</div>
 
-            <div class="item">Item 7</div>
-            <div class="item">Item 8</div>
-            <div class="item">Item 9</div>
+            <div class="item">7</div>
+            <div class="item">8</div>
+            <div class="item">9</div>
         </div>
             
     </div>
