--- a/page_2.html
+++ b/page_2.html
@@ -16,17 +16,17 @@
     </div>
 
     <div id="middle-column">
-            <div class="item">Item 1</div>
-            <div class="item">Item 2</div>
-            <div class="item">Item 3</div>
+            <div class="item"><b>Item 1</b></div>
+            <div class="item"><b>Item 2</b></div>
+            <div class="item"><b>Item 3</b></div>
 
-            <div class="item">Item 4</div>
-            <div class="item">Item 5</div>
-            <div class="item">Item 6</div>
+            <div class="item"><b>Item</b></div>
+            <div class="item"><b>Item 5</b></div>
+            <div class="item"><b>Item 6</b></div>
 
-            <div class="item">Item 7</div>
-            <div class="item">Item 8</div>
-            <div class="item">Item 9</div>
+            <div class="item"><b>Item 7</b></div>
+            <div class="item"><b>Item 8</b></div>
+            <div class="item"><b>Item 9</b></div>
     </div>
     
 
