--- a/page_3.html
+++ b/page_3.html
@@ -19,17 +19,15 @@
 <div id="container">
     <div id="middle-column">
         <div class="item-holder">
-            <div class="item">1</div>
-            <div class="item">2</div>
-            <div class="item">3</div>
-
-            <div class="item">4</div>
-            <div class="item">5</div>
-            <div class="item">6</div>
-
-            <div class="item">7</div>
-            <div class="item">8</div>
-            <div class="item">9</div>
+            <div class="item"><b>1</b></div>
+            <div class="item"><b>2</b></div>
+            <div class="item"><b>3</b></div>
+            <div class="item"><b>4</b></div>
+            <div class="item"><b>5</b></div>
+            <div class="item"><b>6</b></div>
+            <div class="item"><b>7</b></div>
+            <div class="item"><b>8</b></div>
+            <div class="item"><b>9</b></div>
         </div>
             
     </div>
